# system_input_preprocessing

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  add_paragraph_ids.py  conversion.py  extract_paragraphs.py  extraction.py  find_references.py  main.py  mammoth_test.py  pyproject.toml
data/: sample_manuscript.html
data/docx/: sample_manuscript.docx
data/html/: sample_manuscript.html
test/: test_extraction.py  test_references.py
tests/: test_references.py
